--- a/Documentacion/Grh-Solutions/grh-solutions.client/src/generics/sidebar/sideBar.module.scss
+++ b/Documentacion/Grh-Solutions/grh-solutions.client/src/generics/sidebar/sideBar.module.scss
@@ -2,7 +2,7 @@
     background-color: #2c3e50; // Fondo oscuro
     display: flex;
     flex-direction: column;
-    position: fixed;
+    position: absolute;
     height: 100vh;
     width: 34vh;
     top: 0;
