--- a/Grh-Solutions/grh-solutions.client/src/generics/navBar/navBar.module.scss
+++ b/Grh-Solutions/grh-solutions.client/src/generics/navBar/navBar.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center; 
     justify-content: space-between; 
-    background-color: #2c3e50;
+    background-color: #d1d2d4;
     padding: 10px ;
     position: fixed;
     top: 0;
@@ -12,19 +12,31 @@
 }
 .right{
     display: flex;
+    margin-right: 30px;
 }
 .left {
     color: white;
     font-size: 1.5rem;
     display: flex;
     align-items: center;
+    gap: 2px;
+
+    h2{
+        margin-left: 1rem;
+    }
 }
 .icon{
     display: flex;
+    align-items: center;
+    padding-right: 5px;
 }
 .search{
     display: flex;
     color: white;
     border-radius: 5px;
     justify-content: space-between; 
+}
+.menu{
+    align-items: center;
+    text-align: center;
 }
