--- a/Grh-Solutions/grh-solutions.client/src/pages/main.module.scss
+++ b/Grh-Solutions/grh-solutions.client/src/pages/main.module.scss
@@ -1,4 +1,9 @@
 .main{
     padding: 0;
-    margin: 0;
+    display: flex;
+    justify-content: center;
+    width: 98.5vw;
+    align-items: center;
+    height: 98.5vh;
+    gap: 500px;
 }
