--- a/Grh-Solutions/grh-solutions.client/src/index.css
+++ b/Grh-Solutions/grh-solutions.client/src/index.css
@@ -1,3 +1,12 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
+    flex: 1;
+}
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
 }
