--- a/Grh-Solutions/grh-solutions.client/src/pages/index/index.styles.scss
+++ b/Grh-Solutions/grh-solutions.client/src/pages/index/index.styles.scss
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
   min-height: 100vh;
   width: 100%;
-  overflow: auto; /* Cambiado de hidden a auto */
 }
 
 .content {
   text-align: center;
   width: 100%;
-  min-height: 69%;
+  min-height: 70%;
   background-image: url('../../img/disloin3.jpg');
   background-size: cover;
   background-position: center;
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative; /* Solo si es necesario */
+  position: relative;
 }
 
 .content::before {
@@ -29,7 +29,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 1; /* Asegúrate de que este z-index sea menor que el contenido principal */
+  z-index: 1;
 }
 
 .main-container {
@@ -37,7 +37,7 @@
   align-items: center;
   width: 100%;
   max-width: 1200px;
-  z-index: 2; /* Asegúrate de que este z-index sea mayor que el ::before */
+  z-index: 2;
   gap: 30px;
 }
 
@@ -80,14 +80,13 @@
 
 .footer {
   width: 100%;
+  height: 100%;
   border: 1px solid rgb(82, 82, 82);
   text-align: center;
-  height: 18vh;
   font-family: Arial, sans-serif;
   border-radius: 5px;
   padding: 20px 0;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-  /* Elimina z-index a menos que sea necesario */
 }
 
 .contact-title {
@@ -132,4 +131,28 @@
 
 .social-icons a:hover {
   color: #ffffff;
+}
+
+@media (max-width: 1024px) {
+  .main-container,
+  .content,
+  .footer {
+    margin-left: 200px; 
+    width: calc(100% - 200px);
+  }
+}
+
+@media (max-width: 768px) {
+  .main-container,
+  .content,
+  .footer {
+    margin-left: 0; 
+    width: 100%;
+  }
+
+  .contact-section {
+    flex-direction: column;
+    text-align: center;
+    padding-left: 0;
+  }
 }
