--- a/Grh-Solutions/grh-solutions.client/src/pages/solicitudes/stiles.scss
+++ b/Grh-Solutions/grh-solutions.client/src/pages/solicitudes/stiles.scss
@@ -24,7 +24,7 @@
 
 
 .button2 {
-    color: blue;
+    color: #0000ff;
     border: none;
     cursor: pointer;
     &:hover {
@@ -434,4 +434,103 @@ margin-top: 5%;
   .docText label {
     margin: 0;
   }
+  
+  .buttonContainerc {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 10px;
+    background-color: white;
+    border-top: 1px solid #ddd;
+    margin-bottom: 1%;
+  }
+  
+  .btnc {
+    background-color: #3695f4;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .cancelc {
+    background-color: #f44336;
+  }
+  
+  .btnc:hover, .cancelc:hover {
+    opacity: 0.9;
+  }
+  
+  .box1{
+
+    background:none;
+    left: 0%;
+    position: absolute;
+    margin-top: 15%;
+    margin-left: 2%;
+    width: 45%;
+  }
+
+  .box2{
+
+    background:none;
+    left: 48%;
+    position: absolute;
+    margin-top: 16%;
+    margin-left: 2%;
+    width: 48%;
+  }
+
+  .box3{
+
+    background:none;
+    left: 0%;
+    position: absolute;
+    margin-top: 25%;
+    margin-left: 2%;
+    width: 96%;
+  }
+
+  .box4{
+
+    background:none;
+    left: 0%;
+    position: absolute;
+    margin-top: 35%;
+    margin-left: 2%;
+    width: 96%;
+  }
+
+  .descriptioncreated{
+
+    margin-left: 2%;
+    margin-top: 45%;
+    left: 0%;
+    position: absolute;
+  }
+
+  .filescreated{
+
+    margin-left: 2%;
+    margin-top: 60%;
+    left: 0%;
+    position: absolute;
+  }
+
+  .docreated{
+
+    margin-left: 2%;
+    margin-top: 60%;
+    margin-right: 2%;
+    right: 0%;
+    position: absolute;
+    width: 50%;
+  }
+
   
